Added reference links to HTML

--- a/index.html
+++ b/index.html
@@ -47,9 +47,22 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Kajal Mungroo</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/KajalMungroo" target="_blank"
+            >Kajal Mungroo</a
+          >
+          and is
+          <a
+            href="https://github.com/KajalMungroo/Week-6-Homework-SheCodes"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://main--jovial-bunny-1ea9da.netlify.app/?"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
